Updated UserInfo size

--- a/gallery/DrawingLayouts.html
+++ b/gallery/DrawingLayouts.html
@@ -47,7 +47,7 @@
 			</div><!-- header -->
 			
 			<div class="content">
-				<h1> Drawing layouts <span>Recovery initial files</span></h1>
+				<h1> Drawing layouts <span>Revision of source files</span></h1>
 				<div id="rg-gallery" class="rg-gallery">
 					<div class="rg-thumbs">
 						<!-- Elastislide Carousel Thumbnail Viewer -->
