--- a/gallery/Prepress.html
+++ b/gallery/Prepress.html
@@ -112,10 +112,10 @@
 									<li><a href="#"><img src="images/Prepress/thumbs/0001 (52).jpg" data-large="images/Prepress/0001 (52).jpg" alt="image01" data-description="" /></a></li>
 									<li><a href="#"><img src="images/Prepress/thumbs/0001 (53).jpg" data-large="images/Prepress/0001 (53).jpg" alt="image01" data-description="" /></a></li>
 									<li><a href="#"><img src="images/Prepress/thumbs/0001 (54).jpg" data-large="images/Prepress/0001 (54).jpg" alt="image01" data-description="" /></a></li>
-									<li><a href="#"><img src="images/Prepress/thumbs/0001 (55).jpg" data-large="images/Prepress/0001 (55).jpg" alt="image01" data-description="" /></a></li>
+									<li><a href="#"><img src="images/Prepress/thumbs/0001 (55).JPG" data-large="images/Prepress/0001 (55).JPG" alt="image01" data-description="" /></a></li>
 									<li><a href="#"><img src="images/Prepress/thumbs/0001 (56).jpg" data-large="images/Prepress/0001 (56).jpg" alt="image01" data-description="" /></a></li>
-									<li><a href="#"><img src="images/Prepress/thumbs/0001 (57).jpg" data-large="images/Prepress/0001 (57).jpg" alt="image01" data-description="" /></a></li>
-									<li><a href="#"><img src="images/Prepress/thumbs/0001 (58).jpg" data-large="images/Prepress/0001 (58).jpg" alt="image01" data-description="" /></a></li>
+									<li><a href="#"><img src="images/Prepress/thumbs/0001 (57).JPG" data-large="images/Prepress/0001 (57).JPG" alt="image01" data-description="" /></a></li>
+									<li><a href="#"><img src="images/Prepress/thumbs/0001 (58).JPG" data-large="images/Prepress/0001 (58).JPG" alt="image01" data-description="" /></a></li>
 									<li><a href="#"><img src="images/Prepress/thumbs/0001 (59).jpg" data-large="images/Prepress/0001 (59).jpg" alt="image01" data-description="" /></a></li>
 									<li><a href="#"><img src="images/Prepress/thumbs/0001 (60).jpg" data-large="images/Prepress/0001 (60).jpg" alt="image01" data-description="" /></a></li>
 									<li><a href="#"><img src="images/Prepress/thumbs/0001 (61).jpg" data-large="images/Prepress/0001 (61).jpg" alt="image01" data-description="" /></a></li>
